CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
PROJECT(opengl_fw_demo)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")

#FIND_PACKAGE(GL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLFW3 REQUIRED)
find_package(ASSIMP REQUIRED)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
SET(LIBS ${OpenGL_LIBS} ${GLFW3_LIBRARY} ${ASSIMP_LIBS} dl)
SET(INC ${OpenGL_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES(${INC})
ADD_EXECUTABLE(demo ${SRC_LIST})
TARGET_LINK_LIBRARIES(demo ${LIBS})
