CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
PROJECT(demoTest)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")

#FIND_PACKAGE(GL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLFW3 REQUIRED)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
SET(LIBS ${OpenGL_LIBS} ${GLFW3_LIBRARY} dl)
SET(INC ${OpenGL_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/inc)
SET(DEMOSRC  ${PROJECT_SOURCE_DIR}/test/demoTest.cc ${SRC_LIST})
INCLUDE_DIRECTORIES(${INC})
ADD_EXECUTABLE(demo ${DEMOSRC})
TARGET_LINK_LIBRARIES(demo ${LIBS})
