CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
PROJECT(vectorDemo)
#FIND_PACKAGE()

AUX_SOURCE_DIRECTORY(./src SRC_LIST)
SET(INC_LIST ${PROJECT_SOURCE_DIR}/inc)
#SET(LIBS ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${INC_LIST})
ADD_EXECUTABLE(vectorDemo ${SRC_LIST})
#TARGET_LINK_LIBRARIES(vectorDemo ${LIBS})

